Add file path regex.